--- a/requirements.txt
+++ b/requirements.txt
@@ -10,11 +10,13 @@ google-auth==2.16.2
 google-auth-httplib2==0.1.0
 googleapis-common-protos==1.58.0
 h11==0.14.0
+honeybadger==0.15.1
 httplib2==0.21.0
 idna==3.4
 numpy==1.24.2
 pandas==1.5.3
 protobuf==4.22.0
+psutil==5.9.4
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pydantic==1.10.5
