--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,7 @@ pkginfo==1.9.6
 postgrest==0.10.6
 protobuf==4.22.0
 psutil==5.9.4
+psycopg2-binary==2.9.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
