--- a/requirements.txt
+++ b/requirements.txt
@@ -50,6 +50,7 @@ pyparsing==3.0.9
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-gitlab==3.13.0
+python-http-client==3.3.7
 python-semantic-release==7.33.2
 pytz==2022.7.1
 readme-renderer==37.3
@@ -60,10 +61,12 @@ rfc3986==1.5.0
 rsa==4.9
 SecretStorage==3.3.3
 semver==2.13.0
+sendgrid==6.10.0
 six==1.16.0
 smartypants==2.0.1
 smmap==5.0.0
 sniffio==1.3.0
+starkbank-ecdsa==2.2.0
 starlette==0.25.0
 storage3==0.5.2
 StrEnum==0.4.10
