--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,10 @@ click-log==0.4.0
 colorama==0.4.6
 cryptography==40.0.1
 deprecation==2.1.0
+dnspython==2.3.0
 docutils==0.19
 dotty-dict==1.3.1
+email-validator==2.0.0.post2
 fastapi==0.92.0
 gitdb==4.0.10
 GitPython==3.1.31
